@@ -258,9 +258,9 @@ typedef struct
     /** One more than the smallest
         mul/div operation the processor can do natively
         Eg if the processor has an 8 bit mul, native below is 2 */
-    unsigned muldiv;
+    unsigned int muldiv;
     /** Size of the biggest shift the port can handle. -1 if port can handle shifts of arbitrary size. */
-    unsigned shift;
+    signed int shift;
   }
   support;
 
